trunk/Archive2/11/a3458a9ebb3ea2/output
main.cpp: In function 'int main()':
main.cpp:16:42: error: request for member 'baz' in 'fooB', which is of pointer type 'Foo*' (maybe you meant to use '->' ?)
     std::cout << fooA.bar << " " << fooB.baz << std::endl;
                                          ^
